First and final commit

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="style.css">
     <title>Montanari Pre-Entrega 3</title>
 </head>
@@ -15,6 +16,7 @@
                 <li id="verCompletadas"><a>Ver Completadas</a></li>
                 <li id="ocultarCompletadas"><a>Ocultar Completadas</a></li>
                 <li id="borrarTodo"><a>Borrar Todas las Tareas</a></li>
+                <li id="recomendaciones"><a>Recomendaciones del Dev</a></li>
             </ul>
         </nav>
     </div>
